--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 ---
 collections:
   - name: juniper.device
-
+  - name: community.general
 roles:
   - name: juniper.junos
   - name: Juniper.junos
