--- a/requirements.yml
+++ b/requirements.yml
@@ -2,6 +2,7 @@
 collections:
   - name: juniper.device
   - name: community.general
+    source: https://old-galaxy.ansible.com/
 roles:
   - name: juniper.junos
   - name: Juniper.junos
